@@ -1,3 +1,9 @@
+2009-09-21  Piotr Fusik  <fox@scene.pl>
+* win32/wasap/wasap.exe: close the open dialog or error message when opening
+  file from the Explorer. Dragging a corrupted file to wasap.exe ten times
+  caused a crash (reported by Ramos).
+
+
 2009-09-18  Piotr Fusik  <fox@scene.pl>
 * win32/Makefile: grep version numbers from different files
 
